Fix the collapsing DropDownList with no items in a ToolBar. Closes telerik/kendo-ui-core#192.

--- a/styles/web/common/toolbar.less
+++ b/styles/web/common/toolbar.less
@@ -26,6 +26,13 @@
     padding-bottom: 2px;
 }
 
+.k-toolbar .k-input:before
+{
+    content: "\a0";
+    display: inline-block;
+    width: 0;
+}
+
 .k-toolbar .k-combobox .k-dropdown-wrap:before,
 .k-toolbar .k-picker-wrap:before,
 .k-toolbar .k-numeric-wrap:before
